# lotar

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PARAMETER_ORDER_TEST_ANALYSIS.md  README.md  SUPPORT.md  TODO.md  build.rs  clippy.toml  package-lock.json  package.json  rustfmt.toml  test.sh  test_detect.rs  test_integration.sh  test_type_filter_fix.rs  vite.config.mts  vitest.config.mts
.config/: nextest.toml
.githooks/: SETUP.md  pre-commit  pre-push
.github/: copilot-instructions.md
.github/instructions/: backend.instructions.md  frontend.instructions.md  smoke.instructions.md
.github/workflows/: ci.yml  codeql.yml  homebrew-verify.yml  release.yml  scoop-verify.yml
docs/: README.md  architecture-decisions.md  current-state-analysis.md  docker.md  feature-specifications.md  implementation-roadmap.md  mcp-integration-specification.md  mcp-web-foundation-plan.md  openapi.json  release-guide.md  revised-critical-analysis.md  smart-project-management.md  styles.md  task-file-format-specification.md  test-results-summary.md  testing-strategy.md
docs/developers/: README.md  add.md  agent-automation-tracker.md  agent-integrations-plan.md  api-quick-reference.md  assignee.md  changelog.md  cli.md  comment.md  completions.md  config-reference.md  config.md  due-date.md  effort.md  environment.md  errors.md  git.md  history.md  identity.md  index.md  list.md  main.md  mcp-tools.md  mcp.md  precedence.md  preferences.md  priority.md  scan.md  serve.md  sprints.md  sse.md  stats.md  status.md  sync.md  task-model.md  task.md  templates.md  testing.md  whoami.md
docs/docker/: README.md
docs/help/: add.md  agent-instructions.md  agent.md  api-quick-reference.md  assignee.md  automation.md  changelog.md  comment.md  completions.md  config-reference.md  config.md  due-date.md  effort.md  environment.md  errors.md  git.md  history.md  identity.md  index.md  list.md  main.md  mcp-tools.md  mcp.md  precedence.md  preferences.md  priority.md  scan.md  serve.md  set.md  sprints.md  sse.md  stats.md  status.md  task-model.md  task.md  templates.md  whoami.md
scripts/: agent.mjs
smoke/: README.md  tsconfig.json  vitest.config.ts
smoke/helpers/: binary.ts  cli.ts  git.ts  index.ts  mcp-harness.ts  mcp.ts  mock-agent.sh  server.ts  setup.ts  ui.ts  workspace.ts
smoke/tests/: api.agent-jobs.smoke.spec.ts  api.automation.smoke.spec.ts  api.basic.smoke.spec.ts  cli.advanced.smoke.spec.ts  cli.agent-commands.smoke.spec.ts  cli.automation.smoke.spec.ts  cli.basic.smoke.spec.ts  cli.config-agent.smoke.spec.ts  cli.git-hooks.smoke.spec.ts  cli.members.smoke.spec.ts  cli.multi-project.smoke.spec.ts  cli.relationships.smoke.spec.ts  mcp.agent-tools.smoke.spec.ts  mcp.high-value.smoke.spec.ts  mcp.members.smoke.spec.ts  mcp.protocol.smoke.spec.ts  mcp.sprint-add-identifiers.smoke.spec.ts  mcp.sprints.smoke.spec.ts  mcp.tools-call-shape.smoke.spec.ts  ui.advanced.smoke.spec.ts  ui.agent-jobs.smoke.spec.ts  ui.automation.smoke.spec.ts  ui.basic.smoke.spec.ts  ui.members.smoke.spec.ts  ui.multi-project.smoke.spec.ts  ui.project-labels.smoke.spec.ts  ui.regressions.smoke.spec.ts  ui.sprint-analytics.smoke.spec.ts  ui.sprints.smoke.spec.ts  ui.sse-reactivity.smoke.spec.ts
src/: api_events.rs  api_server.rs  api_types.rs  config.rs  errors.rs  index.rs  lib.rs  main.rs  project.rs  routes.rs  scanner.rs  store.rs  tasks.rs  types.rs  utils.rs  utils_git.rs  web_server.rs  workspace.rs
src/automation/: mod.rs  persistence.rs  template.rs  types.rs
src/cli/: args_common.rs  args_config.rs  args_scan.rs  args_serve.rs  args_task.rs  mod.rs  preprocess.rs  project.rs  validation.rs
src/commands/: mod.rs
src/config/: bootstrap.rs  env_overrides.rs  manager.rs  mod.rs  normalization.rs  operations.rs  persistence.rs  resolution.rs  source_labels.rs  templates.rs  templates_new.rs  types.rs
src/help/: mod.rs
src/mcp/: server.rs
src/output/: json.rs  markdown.rs  mod.rs  table.rs  text.rs
src/services/: agent_context_service.rs  agent_job_service.rs  agent_log_service.rs  agent_queue_service.rs  agent_runner.rs  attachment_service.rs  (+22 more)
tests/: CLI_TESTING.md  README.md  advanced_list_features_test.rs  agent_automation_integration_test.rs  assignee_preservation_test.rs  audit_last_change_test.rs  auto_branch_infer_type_toggle_test.rs  auto_tags_from_path_toggle_test.rs  branch_alias_inference_integration_test.rs  branch_inference_integration_test.rs  changelog_integration_test.rs  changelog_range_json_test.rs  changelog_range_test.rs  changelog_smoke_test.rs  changelog_working_tree_test.rs  cli_add_defaults_unit_test.rs  cli_agent_check_test.rs  cli_arg_deser_test.rs  cli_basic_test.rs  cli_commands_integration_test.rs  cli_file_structure_test.rs  cli_handlers_unit_test.rs  cli_init_alias_test.rs  cli_init_behavior_test.rs  cli_integration_test.rs  cli_integration_workflows_test.rs  cli_list_alias_test.rs  cli_list_effort_filters_and_sort_test.rs  cli_list_pagination_test.rs  cli_manifest_identity_test.rs  cli_parameter_order_test.rs  cli_performance_test.rs  cli_priority_unit_test.rs  cli_project_resolver_unit_test.rs  cli_serve_features_test.rs  cli_serve_port_parsing_test.rs  cli_sprint_basic_test.rs  cli_sprint_burndown_test.rs  cli_sprint_calendar_test.rs  cli_sprint_summary_test.rs  (+143 more)
view/: App.jsx  App.vue  TaskDetails.jsx  TaskStatistics.jsx  TasksList.jsx  default.styl  env.d.ts  index.html  main.ts  styles.css  tsconfig.json  vitest.config.ts
(+321 files in other folders)
