[package]
name = "lotar"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "lotar"
path = "src/main.rs"

# Optimize dependencies for smaller binaries
[dependencies]
regex = { version = "1.11", default-features = false, features = ["std"] }
log = { version = "0.4", default-features = false }
include_dir = "0.7"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_yaml = { version = "0.9", default-features = false }
serde_json = { version = "1.0", features = ["std"], default-features = false }
thiserror = "2.0"
dirs = "6.0"
clap = { version = "4.5", features = ["derive", "env", "suggestions", "std"], default-features = false }
termimad = { version = "0.30", default-features = false }
comfy-table = { version = "7.1", default-features = false }
console = { version = "0.15", default-features = false }

# Production release profile optimized for minimal binary size
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = "z"
debug = false

# Test profile optimization for faster test compilation and execution
[profile.test]
opt-level = 0        
debug = 1            
incremental = true   
codegen-units = 256
lto = false          
debug-assertions = true
overflow-checks = true

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.1"
mockall = "0.13"
criterion = "0.7"
proptest = "1.5"
tempfile = "3.10"
