[package]
name = "lotar"
version = "0.6.0"
edition = "2024"

[[bin]]
name = "lotar"
path = "src/main.rs"

# Optimize dependencies for smaller binaries
[dependencies]
regex = { version = "1.11", default-features = false, features = ["std", "unicode", "unicode-perl"] }
include_dir = "0.7"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_yaml = { version = "0.9", default-features = false }
serde_json = { version = "1.0", features = ["std"], default-features = false }
thiserror = "2.0"
dirs = "6.0"
clap = { version = "4.5", features = ["derive", "std"], default-features = false }
clap_complete = "4.5.3"
rayon = { version = "1.10", default-features = false, optional = true }
ignore = { version = "0.4" }
notify = "6"
pulldown-cmark = { version = "0.9", default-features = false }

# Production release profile optimized for minimal binary size
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = "z"
debug = false

# Test profile optimization for faster test compilation and execution
[profile.test]
opt-level = 0        
debug = 1            
incremental = true   
codegen-units = 256
lto = false          
debug-assertions = true
overflow-checks = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
ctor = "0.2"
once_cell = "1.19"

[features]
default = ["parallel"]
schema = ["schemars"]

# Optional features
parallel = ["dep:rayon"]

[dependencies.schemars]
version = "0.8"
optional = true