[package]
name = "lotar"
version = "0.7.5"
edition = "2024"

[[bin]]
name = "lotar"
path = "src/main.rs"

# Optimize dependencies for smaller binaries
[dependencies]
regex = { version = "1.12.2", default-features = false, features = ["std", "unicode", "unicode-perl"] }
include_dir = "0.7.4"
chrono = { version = "0.4.42", features = ["serde", "clock"], default-features = false }
serde = { version = "1.0.228", features = ["derive"], default-features = false }
serde_yaml = { version = "0.9.34", default-features = false }
serde_json = { version = "1.0.145", features = ["std"], default-features = false }
thiserror = "2.0.17"
dirs = "6.0.0"
clap = { version = "4.5.57", features = ["derive", "std", "env"], default-features = false }
clap_complete = "4.5.65"
rayon = { version = "1.11.0", default-features = false, optional = true }
ignore = { version = "0.4.25" }
notify = "8.2.0"
pulldown-cmark = { version = "0.13.0", default-features = false }
blake3 = { version = "1.8.3", default-features = false, features = ["std"] }
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
ureq = { version = "2.10.1", features = ["json"] }

# Production release profile optimized for minimal binary size
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = "z"
debug = false

# Profile intended for running tests in CI and locally.
#
# The default release profile is tuned for smallest binary size (fat LTO, opt-level=z,
# single codegen unit), which can significantly slow down linking many test binaries and
# can trigger intermittent macOS toolchain crashes.
[profile.ci]
inherits = "release"
lto = false
codegen-units = 16
opt-level = 2
panic = "unwind"
strip = "none"

# Test profile optimization for faster test compilation and execution
[profile.test]
opt-level = 0        
debug = 1            
incremental = true   
codegen-units = 256
lto = false          
debug-assertions = true
overflow-checks = true

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.23.0"
ctor = "0.6.3"
once_cell = "1.21.3"

[features]
default = ["parallel"]
schema = ["schemars"]

# Optional features
parallel = ["dep:rayon"]

[dependencies.schemars]
version = "1.1.0"
optional = true